# FBReaderJ4C

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/NativeFormats/: JavaNativeFormatPlugin.cpp
app/src/main/cpp/NativeFormats/fbreader/src/bookmodel/: FBTextKind.h
app/src/main/cpp/NativeFormats/fbreader/src/formats/css/: StyleSheetTable.cpp
app/src/main/cpp/NativeFormats/fbreader/src/formats/oeb/: OEBBookReader.cpp
app/src/main/cpp/NativeFormats/fbreader/src/formats/xhtml/: XHTMLReader.cpp  XHTMLReader.h
app/src/main/cpp/NativeFormats/util/: AndroidUtil.h
app/src/main/cpp/NativeFormats/zlibrary/text/src/fonts/: FontManager.cpp
app/src/main/cpp/NativeFormats/zlibrary/text/src/model/: ZLCachedMemoryAllocator.h  ZLTextModel.cpp  ZLTextStyleEntry.cpp  ZLTextStyleEntry.h
app/src/main/cpp/NativeFormats/zlibrary/ui/src/android/filesystem/: JavaInputStream.cpp
app/src/main/java/org/geometerplus/android/fbreader/: FBReader.java
app/src/main/java/org/geometerplus/fbreader/bookmodel/: FBTextKind.java
app/src/main/java/org/geometerplus/zlibrary/text/model/: ZLTextPlainModel.java  ZLTextStyleEntry.java
app/src/main/java/org/geometerplus/zlibrary/text/view/: ZLTextStyle.java  ZLTextViewBase.java
app/src/main/java/org/geometerplus/zlibrary/text/view/style/: ZLTextBaseStyle.java  ZLTextDecoratedStyle.java  ZLTextExplicitlyDecoratedStyle.java  ZLTextNGStyle.java
gradle/wrapper/: gradle-wrapper.properties
